@@ -1,9 +1,10 @@
 # Changelog
 
 ## additions
+- shinigami's now get base attack damage increase if putting stats in hakuda
 
 ## changes
-
+- 1 blut point = 0.02 extra base damage -> 1 blut point = 0.1 extra base damage
 ## fixed
 
 ## misc
